@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-06-06T00:55:45Z",
-  "count_outdated" : 945,
-  "uniques_outdated" : 552,
-  "count" : 948,
-  "uniques" : 555,
+  "timestamp" : "2025-06-07T00:55:31Z",
+  "count_outdated" : 946,
+  "uniques_outdated" : 553,
+  "count" : 949,
+  "uniques" : 556,
   "clones" : [
-    {
-      "timestamp": "2025-05-23T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-05-24T00:00:00Z",
       "count": 1,
@@ -25,6 +16,15 @@
     },
     {
       "timestamp": "2025-05-25T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-06-06T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
