@@ -1,12 +1,7 @@
 {
   "count": 3,
-  "uniques": 1,
+  "uniques": 2,
   "clones": [
-    {
-      "timestamp": "2025-05-23T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2025-05-24T00:00:00Z",
       "count": 1,
@@ -14,6 +9,11 @@
     },
     {
       "timestamp": "2025-05-25T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-06-06T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
