@@ -1,3 +1,12 @@
+2025-06-07T00:55:31Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/15502492471 # 667
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-06-07
+* notice: last 14d: unq all: 2 3
+* notice: prev accum: outdated-unq outdated-all / unq all: 552 945 / 555 948
+* notice: next accum: outdated-unq outdated-all / unq all: 553 946 / 556 949
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2025-05-23] / [2025-06-06]
+
 2025-06-06T00:55:45Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/15480384678 # 666
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-06-06
